--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
+    "react-spinners": "^0.13.8",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
